# anatcoder

./: .gitignore  README.md  pyproject.toml  setup_env.sh  train.py
configs/: config.yaml
configs/data/: debug.yaml  default.yaml
configs/eval/: default.yaml
configs/experiment/: naf_baseline.yaml  vanilla_inr.yaml
configs/method/: anatcoder.yaml  fdk.yaml  naf.yaml  spener.yaml  vanilla_inr.yaml
configs/model/: advr.yaml  naf_baseline.yaml  oracle_inr.yaml  vanilla_inr.yaml
configs/train/: default.yaml  naf_baseline.yaml
configs/trainer/: debug.yaml  default.yaml
notebooks/: 00_verify_pipeline.ipynb
scripts/: bruteforce_recon_coords.py  build_atlas.py  diagnose_coords.py  download_data.sh  evaluate.py  generate_projections.py  optimize_recon_affine.py  preprocess_all.py  preprocess_totalseg.py  run_fdk.py  validate_rays_vs_tigre.py  verify_advr_routing.py  verify_dataset.py  verify_model_via_fdk.py  visualize_recon_comparison.py
src/anatcoder/: __init__.py  train.py
src/anatcoder/data/: __init__.py  atlas.py  datamodule.py  dataset.py  preprocess.py  projection.py
src/anatcoder/eval/: __init__.py  global_metrics.py  organ_metrics.py  segmentation_metrics.py  visualization.py
src/anatcoder/lightning/: __init__.py  anatcoder_module.py  base_module.py  baseline_module.py  vanilla_module.py
src/anatcoder/losses/: __init__.py  anatomy_loss.py  anatomy_tv.py  decomposition_loss.py  projection_loss.py  region_loss.py
src/anatcoder/models/: __init__.py  advr_network.py  encoder.py  network.py  ray_utils.py  renderer.py
tests/: test_advr_network.py  test_anatomy_tv_loss.py  test_atlas.py  test_dataset_naf_pairing.py  test_near_far_naf.py  test_network_oracle.py  test_projection.py  test_ray_geometry_tigre.py  test_ray_match_naf.py  test_ray_match_tigre_aligned.py  test_ray_utils.py  test_renderer.py  test_renderer_naf_tigre_projection.py  test_train_integration.py  test_week3_dataset_scripts.py
(+20 files in other folders)
