[project]
name = "anatcoder"
version = "0.1.0"
description = "AnatCoder: Anatomy-Conditioned Neural Implicit Encoding for Sparse-View CT Reconstruction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jian Zhang"},
]

dependencies = [
    "torch>=2.1.0",
    "lightning>=2.1.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "numpy>=1.24.0",
    "SimpleITK>=2.3.0",
    "scikit-image>=0.21.0",
    "matplotlib>=3.7.0",
    "wandb>=0.16.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "nibabel>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "ruff>=0.1.0",
]
cuda = [
    # tinycudann 需要从 GitHub 安装，见 setup_env.sh
    # tigre 需要从 pip 或源码安装
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
